# wogaa_streamlit

./: app.py  pos.csv  pyproject.toml
